...
							onPress = {() => this._onChangePwd()}
						/>
					</View>
				{/*log out button*/}
					<View>
							<Button 
								testID = 'signOutButton'
								title = 'Sign Out'
								color = '#66a3ff'
								onPress = {() => this.props.onSignOut()}
							/>
					</View>
				</View>
...
